<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ScrollView to make the content scrollable -->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="9dp"
            android:id="@+id/profileScrollView"
            app:layout_constraintBottom_toTopOf="@id/bottom_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- CardView -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:layout_margin="1dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="9dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="1dp">

                        <!-- Image with Camera Icon -->
                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <!-- Profile Image -->
                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profileImage"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:src="@drawable/profile"
                                app:civ_border_color="@android:color/white"
                                app:civ_border_width="2dp" />

                            <!-- Camera Icon -->
                            <ImageView
                                android:id="@+id/cameraIcon"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="bottom|end"
                                android:background="@drawable/circle_shadow_background"
                                android:padding="8dp"
                                android:src="@drawable/baseline_camera_alt_24" />
                        </FrameLayout>

                        <!-- Name and Edit Icon Row -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <!-- Name -->
                            <TextView
                                android:id="@+id/profileName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_name"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <!-- Edit Icon -->
                            <ImageView
                                android:id="@+id/editIcon"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="8dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:src="@drawable/baseline_edit_square_24" />
                        </LinearLayout>

                        <!-- Job Title -->
                        <TextView
                            android:id="@+id/jobTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/job_title"
                            android:textColor="@android:color/white"
                            android:textSize="13sp" />

                        <!-- Faculty and University -->
                        <TextView
                            android:id="@+id/facultyText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:gravity="center"
                            android:text="@string/faculty_text"
                            android:textColor="@android:color/white"
                            android:textSize="13sp" />

                        <!-- Address and Contact Info Row -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <!-- Address -->
                            <TextView
                                android:id="@+id/addressText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/address_text"
                                android:textColor="@android:color/white"
                                android:textSize="13sp" />

                            <!-- Contact Info (Clickable Text) -->
                            <TextView
                                android:id="@+id/contactInfoButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:onClick="onContactInfoClick"
                                android:text="@string/contact_info"
                                android:textColor="@android:color/white"
                                android:textSize="13sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- TextView: Saved Jobs -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saved_jobs"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- "See More" Button -->
                    <TextView
                        android:id="@+id/seeMoreSavedJobs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="end"
                        android:onClick="onSeeMoreSavedJobsClick"
                        android:text="@string/see_more"
                        android:textColor="@color/primaryColor"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Horizontal RecyclerView for Saved Jobs -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/savedJobsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_job_horizontal" />

                <!-- Track Applications Status Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/track_applications_status"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- "See More" Button -->
                    <TextView
                        android:id="@+id/seeMoreTrackJobs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="end"
                        android:onClick="onSeeMoreTrackJobsClick"
                        android:text="@string/see_more"
                        android:textColor="@color/primaryColor"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Horizontal RecyclerView for Track Applications Status -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trackApplicationsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />
            </LinearLayout>
        </ScrollView>

        <!-- FrameLayout for Fragments -->
        <FrameLayout
            android:id="@+id/frameContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- BottomNavigationView -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_menu"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#0554A1"
            app:itemIconTint="@color/bottom_nav_item_colors"
            app:itemTextColor="@color/bottom_nav_item_colors"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>